@@ -1,3 +1,7 @@
+2014-01-27 John Wu <John dot Wu at ACM dot org>
+	* tests/scripts/fastbit-config.in: add option --cxxextra to
+	display the extra option required to compile C++ code
+
 2014-01-24 John Wu <John dot Wu at ACM dot org>
 	* configure.ac: add statements to check if --std=c++11 is needed
 	(to remove the need to pass extra flags from command line)
